# grumpy

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run-django.sh  startup.sh  tree.md
.github/workflows/: build.yml  test.yml
config/: asgi.py  gunicorn.conf.py  nginx.conf.erb  urls.py  wsgi.py
config/settings/: __init__.py  base.py  ci.py  deployment.py  development.py
config/templates/: robots.txt
grumpy/books/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
grumpy/books/migrations/: 0001_initial.py  0003_remove_book_id_book_tmp_id.py  0004_rename_tmp_id_book_id.py  0005_alter_book_options_book_created_at_book_updated_at.py
grumpy/core/: checks.py  forms.py  middleware.py  signals.py  storages.py  urls.py  views.py
grumpy/core/admin/: admin_settings.py
grumpy/core/migrations/: 0001_initial.py  0003_remove_grumpysettings_require_verification_and_more.py  0004_grumpysettings_notify_signups.py
grumpy/core/mixins/: __init__.py  mixins_singleton.py
grumpy/core/models/: models_settings.py  models_sites.py
grumpy/core/templates/: base.html  contact.html  error.html  help.html  index.html
grumpy/core/tests/: factories.py  test_settings.py  test_urls.py
grumpy/core/utils/: __init__.py  utils_http.py  utils_imports.py  utils_logging.py  utils_settings.py
grumpy/core/views/: __init__.py  views_core.py  (+1 more)
grumpy/meetings/: admin.py  forms.py  models.py  urls.py  views.py
grumpy/users/: apps.py  auth.py  signals.py  urls.py  validators.py  views.py
server/: requirements.txt
server/config/: urls.py
(+86 files in other folders)
